--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "path": "^0.12.7",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
+        "reload": "^3.2.0",
         "twilio": "^3.80.0",
         "wbm": "^1.1.16",
         "whatsapp-multidevice": "^4.0.3",
@@ -56,6 +57,8 @@
         "yarn": "^1.22.19"
     },
     "devDependencies": {
+        "connect-livereload": "^0.6.1",
+        "livereload": "^0.9.3",
         "nodemon": "^2.0.20"
     }
 }
