password field added sale data

--- a/database/config.env
+++ b/database/config.env
@@ -1,6 +1,6 @@
 PORT = 3000
-DB_URL = "mongodb+srv://doadmin:hM3p57q1ZT64XP80@vitco-impex-db-43ec3327.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=vitco-impex-db"
-# DB_URL = "mongodb://0.0.0.0:27017/VitcoDatabase"
+# DB_URL = "mongodb+srv://doadmin:hM3p57q1ZT64XP80@vitco-impex-db-43ec3327.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=vitco-impex-db"
+DB_URL = "mongodb://0.0.0.0:27017/VitcoDatabase"
 
 BASE_DB_URL = "mongodb://0.0.0.0:27017/"
 
