service report after payments and edit option added

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "liquidjs": "^8.1.0",
         "method-override": "^3.0.0",
         "moment": "^2.29.4",
+        "mongo-aggregation-debugger": "^1.0.4",
         "mongodb": "^4.10.0",
         "mongoose": "^6.5.2",
         "multer": "^1.4.5-lts.1",
