--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "jquery-csv": "^1.0.21",
         "json2csv": "^5.0.7",
         "jsonwebtoken": "^8.5.1",
+        "kerberos": "^0.0.24",
         "liquidjs": "^8.1.0",
         "method-override": "^3.0.0",
         "moment": "^2.29.4",
@@ -43,6 +44,7 @@
         "mongodb": "^4.10.0",
         "mongoose": "^6.5.2",
         "multer": "^1.4.5-lts.1",
+        "nan": "^2.10.0",
         "node-fetch": "^3.2.10",
         "node-notifier": "^10.0.1",
         "objects-to-csv": "^1.3.6",
